--- a/index.html
+++ b/index.html
@@ -18,17 +18,13 @@
 
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/ignacykasperowicz">View On GitHub</a></li>
-        </nav>
-      </div><!-- end header -->
 
     <div class="wrapper">
 
       <section>
         <div id="title">
-          <h1>Ignacykasperowicz.GitHub.io</h1>
+          <h1>Ignacy Kasperowicz</h1>
+          <h3>Full Stack Developer | kasperowicz@ignacy.co</h3>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/ignacykasperowicz">ignacykasperowicz</a></span>
@@ -63,6 +59,6 @@
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+
   </body>
 </html>
